...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseViewActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingEditCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/courseDescriptionView"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="35dp"
                android:ems="10"
                android:hint="Course Description"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/courseTitleHeader" />

            <EditText
                android:id="@+id/courseLanguagesView"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="Course Languages (Comma seperated list)"
...
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/addStudentButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="+"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/moreStudentButton"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/moreStudentButton"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
...
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/addTeacherButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="+"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/moreTeacherButton"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/moreTeacherButton"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
...
                        tools:listitem="@layout/row_user" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/courseDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="Delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
